--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-    <title>dulcecreación</title>
+<title>dulcecreación</title>
 </head>
 <body>
     <header class="header">
@@ -41,35 +41,7 @@
                     <img src="img/bag.svg" alt="">
             </div>
         </div>
-    </header>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-        <img class="d-block w-100" src="img/banner-1.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/banner-2.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/banner-3.jpg"alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-
+      </header>
 
     <div class="content">
 
@@ -80,18 +52,31 @@
           <div class="list">
             <div class="item">
                 <img class="product" src="img/tematicas.png" alt="">
-                <h3 class="name-product">TORAS TEMÁTICAS</h3>
+                <h3 class="name-product">TORTAS TEMÁTICAS</h3>
             </div>
-            <div class="item white">
+            <div class="item">
                 <img class="product" src="img/buttercream.png" alt="">
                 <h3 class="name-product">TORTAS BUTTERCREAM</h3>
             </div>
-            <div class="item white">
+            <div class="item">
                 <img class="product" src="img/producto-3.jpg" alt="">
                 <h3 class="name-product">CUPCAKES</h3>
             </div>
+            <div class="item">
+              <img class="product" src="img/producto-3.jpg" alt="">
+              <h3 class="name-product">NAKED CAKES</h3>
+          </div>
+  </div>
 
-
+  <div class ="recomendacion">
+    <div class="name-category">
+      <a class="name-category"> LO QUE DICEN DE NOSOTROS</a>
+    </div>
+    <div class="item">
+      <img class="product" src="img/personafacebook.png" alt="">
+      <h3 class="name-product">Ana</h3>
+      <h4>recomiendo dulce creación porque...</h4>
+  </div>
   </div>
     
   <footer>
