--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                     <img src="img/menu-button.png" alt="" class="menu-open">
             </div>
         <div class="logo">
-                <img src="img/logo.svg" alt="">
+                <img src="img/logo.png" alt="">
         </div>
       
 
@@ -38,7 +38,7 @@
                     <img src="img/Search.svg" alt="">
             </div>
             <div class="bag">
-                    <img src="img/bag.svg" alt="">
+                    <img src="img/carrito_compras.png" alt="">
             </div>
         </div>
       </header>
