--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,13 @@
             </ul>
         </div>
         <div class="icons-actions-2">
-            <div class="search">
-                    <img src="img/Search.svg" alt="">
-            </div>
             <div class="bag">
                     <img src="img/carrito_compras.png" alt="">
             </div>
         </div>
       </header>
 
-    <div class="content">
+    <section class="col-md-12 col-sm-4 col-xs-12">
 
         <div class="name-category">
             <a class="name-category" href="#"> NUESTROS PRODUCTOS</a>
@@ -51,38 +48,76 @@
 
           <div class="list">
             <div class="item">
-                <img class="product" src="img/tematicas.png" alt="">
+                <img class="product" src="img/tortatematica.png" alt="">
                 <h3 class="name-product">TORTAS TEMÁTICAS</h3>
+            </div>
+            <div class="item">
+                <img class="product" src="img/cupcakes.png" alt="">
+                <h3 class="name-product">CUPCAKES</h3>
             </div>
             <div class="item">
                 <img class="product" src="img/buttercream.png" alt="">
                 <h3 class="name-product">TORTAS BUTTERCREAM</h3>
             </div>
             <div class="item">
-                <img class="product" src="img/producto-3.jpg" alt="">
-                <h3 class="name-product">CUPCAKES</h3>
-            </div>
-            <div class="item">
-              <img class="product" src="img/producto-3.jpg" alt="">
+              <img class="product" src="img/nakedcake.png" alt="">
               <h3 class="name-product">NAKED CAKES</h3>
           </div>
   </div>
+</section >
 
   <div class ="recomendacion">
     <div class="name-category">
       <a class="name-category"> LO QUE DICEN DE NOSOTROS</a>
     </div>
-    <div class="item">
-      <img class="product" src="img/personafacebook.png" alt="">
-      <h3 class="name-product">Ana</h3>
-      <h4>recomiendo dulce creación porque...</h4>
-  </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+      <img class="slide-item" src="img/recomendacion.jpg" alt="First slide">
+      <h3 class="slide-item">Carla</h3>
+      <h4 class="slide-item2">Excelente sabor y la decoración fue tal cual lo esperábamos. Recomiendo al 100%</h4>
+
+        </div>
+        <div class="carousel-item">
+          <img class="slide-item" src="img/recomendacion2.jpg" alt="Second slide">
+          <h3 class="slide-item">Ana</h3>
+          <h4 class="slide-item2">Me encanta! Son super atentos, y cumplidos. Y sobre todo muy rico todo lo que preparan.
+          </h4>
+        </div>
+        <div class="carousel-item">
+          <img class="slide-item" src="img/recomendacion3.png"alt="Third slide">
+          <h3 class="slide-item">Lucía</h3>
+          <h4 class="slide-item2">La mejor opción para un día especial, delicioso y muy bello acabado, me encanta!
+          </h4>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
     
   <footer>
       <span>
           Realizado por: Sandra y Laura
           añadir footer
+          <div class="icons-actions-2">
+            <div class="bag">
+                    <img src="img/icon-facebook.png" alt="">
+                    <img src="img/icon-whatsapp.png" alt="">
+
+            </div>
+        </div>  
       </span>
   </footer>
 
