--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                     <img src="img/menu-button.png" alt="" class="menu-open">
             </div>
         <div class="logo">
-                <img src="img/logo.png" alt="">
+                <img class="logoimg" src="img/logo.png" alt="">
         </div>
       
 
