--- a/src/index.html
+++ b/src/index.html
@@ -108,17 +108,20 @@
   </div>
     
   <footer>
-      <span>
-          Realizado por: Sandra y Laura
-          añadir footer
+      
+        <h4 class="footer-text">dulcecreación 2019 All Rights Reserved.</h4>
           <div class="icons-actions-2">
-            <div class="bag">
+            <div class="icons">
                     <img src="img/icon-facebook.png" alt="">
-                    <img src="img/icon-whatsapp.png" alt="">
-
             </div>
+            <div class="icons">
+                <img src="img/icon-whatsapp.png" alt="">
+        </div>
+        <div class="icons">
+            <img src="img/icon-gmail.png" alt="">
+    </div>
+
         </div>  
-      </span>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
