--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 <title>dulcecreación</title>
@@ -27,7 +26,7 @@
         <div class="navigator-menu">
           <span class="menu-close">✕</span>
             <ul class="menu">
-                <li><a href="#">TIENDA</a></li>
+                <li><a href="shop.html">TIENDA</a></li>
                 <li><a href="#">NOSOTROS</a></li>
                 <li><a href="#">CONTACTO</a></li>
 
