update images in shop.html

--- a/src/shop.html
+++ b/src/shop.html
@@ -47,69 +47,69 @@
   <div class="name-category">
     <a class="name-category" href="#">TIENDA</a>
   </div>
-    <div class="list">
-      <div class="item">
-        <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-        <h3 class="name-price">s/9</h3>
-        <h3 class="name-product-shop">CUPCAKE</h3>
-      </div>
-      <div class="item">
-        <img class="product" src="img/imagenes-tienda/gladiador.png" alt="">
-        <h3 class="name-price">s/250</h3>
-        <h3 class="name-product-shop">GLADIADOR</h3>
-      </div>
-      <div class="item">
-        <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-        <h3 class="name-price">s/9</h3>
-        <h3 class="name-product-shop">CUPCAKE</h3>
-      </div>
-      <div class="item">
-        <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-        <h3 class="name-price">s/9</h3>
-        <h3 class="name-product-shop">CUPCAKE</h3>
-      </div>
-      <div class="item">
-        <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-        <h3 class="name-price">s/9</h3>
-        <h3 class="name-product-shop">CUPCAKE</h3>
-      </div>
-      <div class="item">
-          <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-          <h3 class="name-price">s/9</h3>
-          <h3 class="name-product-shop">CUPCAKE</h3>
-        </div>
-        <div class="item">
-            <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-            <h3 class="name-price">s/9</h3>
-            <h3 class="name-product-shop">CUPCAKE</h3>
-          </div>
-          <div class="item">
-              <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-              <h3 class="name-price">s/9</h3>
-              <h3 class="name-product-shop">CUPCAKE</h3>
-            </div>
-            <div class="item">
-                <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-                <h3 class="name-price">s/9</h3>
-                <h3 class="name-product-shop">CUPCAKE</h3>
-              </div>
-              <div class="item">
-                  <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-                  <h3 class="name-price">s/9</h3>
-                  <h3 class="name-product-shop">CUPCAKE</h3>
-                </div>
-                <div class="item">
-                    <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-                    <h3 class="name-price">s/9</h3>
-                    <h3 class="name-product-shop">CUPCAKE</h3>
-                  </div>
-                  <div class="item">
-                      <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-                      <h3 class="name-price">s/9</h3>
-                      <h3 class="name-product-shop">CUPCAKE</h3>
-                    </div>
-
+  <div class="list">
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
+      <h3 class="name-price">s/9</h3>
+      <h3 class="name-product-shop">CUPCAKE</h3>
     </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/gladiador.png" alt="">
+      <h3 class="name-price">s/250</h3>
+      <h3 class="name-product-shop">GLADIADOR</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/angrybirds.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">ANGRY BIRDS</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/avengers.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">AVENGERS</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/BATMAN-2-540x540.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">BATMAN</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/CERDITO.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">CERDITO</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/gallina.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">GALLINA PINTADITA</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/soyluna.jpg" alt="">
+      <h3 class="name-price">s/350</h3>
+      <h3 class="name-product-shop">SOY LUNA</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/bautizo.jpg" alt="">
+      <h3 class="name-price">s/150</h3>
+      <h3 class="name-product-shop">BAUTIZO</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/UNICORNIO.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">UNICORNIO</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/piña.jpg" alt="">
+      <h3 class="name-price">s/180</h3>
+      <h3 class="name-product-shop">PIÑA</h3>
+    </div>
+    <div class="item">
+      <img class="product" src="img/imagenes-tienda/corona.jpg" alt="">
+      <h3 class="name-price">s/120</h3>
+      <h3 class="name-product-shop">CORONA</h3>
+    </div>
+
+  </div>
 
   <footer>
 
