--- a/src/shop.html
+++ b/src/shop.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style-shop.css">
-
+  <link rel="stylesheet" href="style.css">
   <title>dulcecreación</title>
 </head>
 
 <body>
-  <header class="header">
-
+  <header>
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
     <div class="responsive-menu">
       <img src="img/menu-button.png" alt="" class="menu-open">
     </div>
-    <div class="logo">
-      <img class="logoimg" src="img/logo.png" alt="">
-    </div>
-
-
     <div class="navigator-menu">
       <span class="menu-close">✕</span>
       <ul class="menu">
-        <li><a href="#">TIENDA</a></li>
+        <li><a href="shop.html">TIENDA</a></li>
         <li><a href="#">NOSOTROS</a></li>
         <li><a href="#">CONTACTO</a></li>
-
       </ul>
     </div>
     <div class="icons-actions-2">
@@ -43,76 +34,182 @@
   </header>
 
 
+  <section class="nuestrosp">
+    <div class="name-category">
+      <a class="name-category" href="#">TIENDA</a>
+    </div>      
+    </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/chic.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">CHIC</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/roses.jpg" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">ROSES</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/flamengo.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">FLAMINGO</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/unicorn.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">UNICORN</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/boda.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">BODA</button>
+          </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/sirena.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">SIRENA</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/summer-vibes.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">SUMMER VIBES</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/bautizo.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">BAUTIZO</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/sky-blue-cake.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price"> PRECIO: S/250</h3>
+          <button class="type-button" type="button">SKYBLUE CAKE</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/rose-and-gold.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">ROSE AND GOLD</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/lovely-cucpcakes.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">LOVELY CUPCAKES</button>
+        </div>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <div class="item">
+          <img class="product" src="img/imagenes-tienda/butterscotch-cupcakes.png" alt="">
+          <div class="star-rating">
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+            <a href="#">&#9733;</a>
+          </div>
+          <h3 class="product-price">PRECIO: S/250</h3>
+          <button class="type-button" type="button">BUTTERSCOTCH CUPCAKES</button>
+        </div>
+      </div>
+  </section>
 
-  <div class="name-category">
-    <a class="name-category" href="#">TIENDA</a>
-  </div>
-  <div class="list">
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/cupcake.jpg" alt="">
-      <h3 class="name-price">s/9</h3>
-      <h3 class="name-product-shop">CUPCAKE</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/gladiador.png" alt="">
-      <h3 class="name-price">s/250</h3>
-      <h3 class="name-product-shop">GLADIADOR</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/angrybirds.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">ANGRY BIRDS</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/avengers.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">AVENGERS</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/BATMAN-2-540x540.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">BATMAN</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/CERDITO.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">CERDITO</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/gallina.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">GALLINA PINTADITA</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/soyluna.jpg" alt="">
-      <h3 class="name-price">s/350</h3>
-      <h3 class="name-product-shop">SOY LUNA</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/bautizo.jpg" alt="">
-      <h3 class="name-price">s/150</h3>
-      <h3 class="name-product-shop">BAUTIZO</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/UNICORNIO.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">UNICORNIO</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/piña.jpg" alt="">
-      <h3 class="name-price">s/180</h3>
-      <h3 class="name-product-shop">PIÑA</h3>
-    </div>
-    <div class="item">
-      <img class="product" src="img/imagenes-tienda/corona.jpg" alt="">
-      <h3 class="name-price">s/120</h3>
-      <h3 class="name-product-shop">CORONA</h3>
-    </div>
-
-  </div>
-
-  <footer>
-
+  <footer class="col-md-12 col-sm-12 col-xs-12">
     <h4 class="footer-text">dulcecreación 2019 All Rights Reserved.</h4>
     <div class="icons-actions-2">
       <div class="icons">
@@ -124,16 +221,13 @@
       <div class="icons">
         <img src="img/icon-gmail.png" alt="">
       </div>
-
     </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
