--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>dulcecreación</title>
+  <link rel="shortcut icon" type="image/png" href="img/favicon-dulcecreacion.png" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <div class="responsive-menu">
       <img src="img/menu-button.png" alt="" class="menu-open">
     </div>
-    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
 
     <div class="navigator-menu">
       <span class="menu-close">✕</span>
