--- a/src/shop.html
+++ b/src/shop.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>dulcecreación</title>
-  <link rel="shortcut icon" type="image/png" href="img/poke_icon.png" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon-dulcecreacion.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -17,7 +17,7 @@
     <div class="responsive-menu">
       <img src="img/menu-button.png" alt="" class="menu-open">
     </div>
-    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo"></a>
 
     <div class="navigator-menu">
       <span class="menu-close">✕</span>
